modified system name

--- a/sites/default/files/config_vN_wqUhQxMHoQ932rniOJGCafw1g7Z29Z4QYrXabgNSy01J7SKlVSKL9SBIsGvwL2zbvq7oQ_w/staging/system.site.yml
+++ b/sites/default/files/config_vN_wqUhQxMHoQ932rniOJGCafw1g7Z29Z4QYrXabgNSy01J7SKlVSKL9SBIsGvwL2zbvq7oQ_w/staging/system.site.yml
@@ -1,5 +1,5 @@
 uuid: a9a36807-1e84-4730-ba2a-42f2c6c31049
-name: 'Local: CMI Demo'
+name: 'My Cool Site'
 mail: admin@example.com
 slogan: ''
 page:
