site info change

--- a/sites/default/config/staging/system.site.yml
+++ b/sites/default/config/staging/system.site.yml
@@ -1,7 +1,7 @@
 uuid: bed61b75-ef3a-4162-9b00-ecf11446f1e5
-name: 'Demo LOCAL'
+name: 'CMI - Demo'
 mail: admin@example.com
-slogan: ''
+slogan: 'Power of 8'
 page:
   403: ''
   404: ''
